@@ -3,6 +3,7 @@
  - (dtucker) [auth-pam.c auth-pam.h session.c] Bug #890: Send output from
    failing PAM session modules to user then exit, similar to the way
    /etc/nologin is handled.  ok djm@
+ - (dtucker) [auth-pam.c] Relocate sshpam_store_conv(), no code change.
 
 20040830
  - (dtucker) [session.c openbsd-compat/bsd-cygwin_util.{c,h}] Bug #915: only
@@ -1722,4 +1723,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3541 2004/09/11 12:17:26 dtucker Exp $
+$Id: ChangeLog,v 1.3542 2004/09/11 12:28:01 dtucker Exp $
